# sketch

./: .gitignore  CMakeLists.txt  README.md
include/lexical_cache/: lexical_cache.h
lexical_cache/: CMakeLists.txt
lexical_cache/include/comparefp/: comparefp.h
lexical_cache/include/lexical_cache/: hash_functions.h  lexical_cache.h
lexical_cache/test/perf/: StringToFloatPointPerfTest.cpp
lexical_cache/test/unit/: StringToFloatPointTest.cpp  TestUtils.h
load_shared_lib_with_static/: badlad.cpp  badlad.h  build.sh  client.cpp  interface.h  plugin.cpp
python/: fix_pickle_error.py
python_recipes/: float_str_without_scientific_notion.py  latency_recorder.py  multiprocessing_keyboard_interrupt.py  promise.py
test/: CMakeLists.txt
test/perf/: StringToFloatPointPerfTest.cpp  anotherDummyTest.cpp
test/unit/: StringToFloatPointTest.cpp  TestUtils.h
